[project]
name = "meow-bot"
version = "0.1.0"
description = "meow-bot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_saa"]
plugin_dirs = ["meow_bot/plugins"]
builtin_plugins = []
